# bsec-bme680-esp32s3

./: .cproject  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  basic.h  esp32_s3_driver.c  esp32_s3_driver.h  events_def.h  main.c  net_interface.c  net_interface.h  task_adxl345.c  task_adxl345.h  task_adxl362.c  task_adxl362.h  task_bme680.c  task_bme680.h  task_mqtt.c  task_mqtt.h
main/bme680_iaq_33v_3s_4d/: bsec_iaq.c  bsec_iaq.h
main/bsec_integration/: bsec_integration.c  bsec_integration.h
main/inc/: bsec_datatypes.h  bsec_interface_multi.h
main/utils/crc/: crc16.c  crc16.h
partition_table/: partitionTable.csv
